--- a/style.css
+++ b/style.css
@@ -18,6 +18,10 @@ body {
 	padding-right: 15px;
 }
 
+.container h1 {
+	font-size: 40px;
+}
+
 .header {
 	position: relative;
 	min-height: calc(100vh);
@@ -30,12 +34,13 @@ body {
 
 	.header h1 {
 		font-size: 72px;
+		padding-top: 50px;
 	}
 
 
 .nav {
 	position: fixed;
-    background: #326647;
+    background: #326647d7;
 	z-index: 1;
 	width: 100%;
 	top: 0;
@@ -116,11 +121,86 @@ a:hover {
 		width: 100%;
 		height: 3px;
 		background-color: white;
+		transition: all 0.8s;
 
 	}
 
-	.footer {
-		text-align: right;
-		padding: 15px;
-		background-color: #326647;
+	.change .line1 {
+		transform: rotateZ(-45deg) translate(-8px, 6px);
+	}
+
+ 	.change .line2 {
+		opacity: 0;
+	}
+
+	.change .line3 {
+		transform: rotateZ(45deg) translate(-8px, -6px);
+	}
+.inst {
+	width: 50px;
+	padding: 0;
+	margin: 0;
+	text-align: left;
+	top: 10px;
+	left: 275px;
+	position: absolute;
 }
+.fb {
+	width: 50px;
+	padding: 0;
+	margin: 0;
+	text-align: left;
+	top: 10px;
+	left: 350px;
+	position: absolute;
+}
+
+
+#txt1 {
+	position: absolute;
+	font-size: 30px;
+	left: 30px;
+	color: white;
+	top: 15px;
+}
+
+#txt2 {
+	position: absolute;
+	font-size: 20px;
+	width: 200px;
+	right: 150px;
+	color: white;
+	top: 10px;
+	border: 3px solid;
+	margin: 5px;
+	padding: 5px;
+	text-align: center;
+	transition: .5s;
+}
+
+#txt2:hover {
+	background-color: white;
+	color: #326647;
+}
+
+#ik {
+	padding-top: 200px;
+	font-size: 80px;
+	color: white;
+	transition: 0.1s;
+}
+
+#ik:hover {
+	font-size: 80px;
+	cursor: pointer;
+	color: #326647;
+	position: relative;
+	top: 3px;
+}
+
+.footer {
+	text-align: right;
+	padding: 5px;
+	background-color: #326647;
+}
+
