--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
 	position: relative;
 	min-height: calc(100vh);
 	padding: 250px 0;
-	background: url('imgs/header1.jpg') center/cover no-repeat;
+	background: url('imgs/header2.jpg') center/cover no-repeat;
 	color: #fff;
 	text-align: center;
 	overflow: hidden;
@@ -49,12 +49,12 @@ body {
 }
 
 .menu {
-	width: 200px;
+	width: 220px;
 	height: 100%;
 	background-color: #326647;
 	position: fixed;
 	top: 0;
-	right: -200px;
+	right: -220px;
 	z-index: 1;
 	display: flex;
 	justify-content: center;
@@ -84,6 +84,7 @@ body {
 }
 a:hover {
 	color: #000000;
+	font-weight: bold;
 }
 
 
@@ -95,47 +96,47 @@ a:hover {
 }
 
 	.section:nth-of-type(even) { /*parzyste*/
-		background:	white;
-		color: black;
+	background:	white;
+	color: black;
 
 	}
 
 	.section *:not(:first-child) {
-		margin-top: 30px;
+	margin-top: 30px;
 	}
 
-	.hamburger {
-		width: 35px;
-		height: 30px;
-		position: fixed;
-		top: 20px;
-		right: 50px;
-		cursor: pointer;
-		display: flex;
-		flex-direction: column;
-		justify-content: space-around;
+.hamburger {
+	width: 35px;
+	height: 30px;
+	position: fixed;
+	top: 20px;
+	right: 50px;
+	cursor: pointer;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
 
-	}
+}
 	
-	.line {
-		width: 100%;
-		height: 3px;
-		background-color: white;
-		transition: all 0.8s;
+.line {
+	width: 100%;
+	height: 3px;
+	background-color: white;
+	transition: all 0.8s;
 
-	}
+}
 
-	.change .line1 {
-		transform: rotateZ(-45deg) translate(-8px, 6px);
-	}
+.change .line1 {
+	transform: rotateZ(-45deg) translate(-8px, 6px);
+}
 
- 	.change .line2 {
-		opacity: 0;
-	}
+.change .line2 {
+	opacity: 0;
+}
 
-	.change .line3 {
-		transform: rotateZ(45deg) translate(-8px, -6px);
-	}
+.change .line3 {
+	transform: rotateZ(45deg) translate(-8px, -6px);
+}
 .inst {
 	width: 50px;
 	padding: 0;
@@ -168,7 +169,7 @@ a:hover {
 	position: absolute;
 	font-size: 20px;
 	width: 200px;
-	right: 150px;
+	right: 250px;
 	color: white;
 	top: 10px;
 	border: 3px solid;
@@ -198,9 +199,80 @@ a:hover {
 	top: 3px;
 }
 
+.contact-info{
+	display: flex;
+	width: 100%;
+	max-width: 1200px;
+	align-items: center;
+	justify-content: center;
+	padding: 0 20px;
+  }
+  
+  
+  .card{
+	background: #326647;
+	padding: 0 20px;
+	margin: 0 20px;
+	width: calc(33% - 20px);
+	height: 150px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	color: #fff;
+	cursor: pointer;
+  }
+  
+  .card-icon{
+	margin-top: 20px;
+	font-size: 28px;
+	background: #000000;
+	width: 60px;
+	height: 60px;
+	text-align: center;
+	line-height: 60px !important;
+	border-radius: 50%;
+	transition: 0.3s linear;
+  }
+  
+  .card:hover .card-icon{
+	background: none;
+	color: #000000;
+	transform: scale(1.6);
+  }
+  
+  .card p{
+	margin-top: 20px;
+	font-weight: 300;
+	letter-spacing: 2px;
+	max-height: 0;
+	opacity: 0;
+	transition: 0.3s linear;
+  }
+  
+  .card:hover p{
+	max-height: 40px;
+	opacity: 1;
+  }
+  
+  #test {
+	margin-top: 30px;
+  }
+
+  @media screen and (max-width:800px) {
+	.contact-info{
+	  flex-direction: column;
+	}
+	.card{
+	  width: 100%;
+	  max-width: 300px;
+	  margin: 10px 0;
+	}
+  }
+
 .footer {
 	text-align: right;
 	padding: 5px;
-	background-color: #326647;
+	background-color: white;
 }
 
