--- a/style.css
+++ b/style.css
@@ -25,8 +25,8 @@ body {
 .header {
 	position: relative;
 	min-height: calc(100vh);
-	padding: 250px 0;
-	background: url('imgs/header2.jpg') center/cover no-repeat;
+	padding: 75px 0;
+	background: url('imgs/tlo.jpg') center/cover no-repeat;
 	color: #fff;
 	text-align: center;
 	overflow: hidden;
@@ -110,7 +110,7 @@ a:hover {
 	height: 30px;
 	position: fixed;
 	top: 20px;
-	right: 50px;
+	right: 70px;
 	cursor: pointer;
 	display: flex;
 	flex-direction: column;
@@ -137,22 +137,14 @@ a:hover {
 .change .line3 {
 	transform: rotateZ(45deg) translate(-8px, -6px);
 }
-.inst {
-	width: 50px;
-	padding: 0;
-	margin: 0;
-	text-align: left;
-	top: 10px;
-	left: 275px;
-	position: absolute;
-}
+
 .fb {
 	width: 50px;
 	padding: 0;
 	margin: 0;
 	text-align: left;
 	top: 10px;
-	left: 350px;
+	left: 275px;
 	position: absolute;
 }
 
