--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
 	position: relative;
 	min-height: calc(100vh);
 	padding: 75px 0;
-	background: url('imgs/tlo.jpg') center/cover no-repeat;
+	background: url('imgs/tlo2.jpg') center/cover no-repeat;
 	color: #fff;
 	text-align: center;
 	overflow: hidden;
