--- a/style.css
+++ b/style.css
@@ -25,8 +25,8 @@ body {
 .header {
 	position: relative;
 	min-height: calc(100vh);
-	padding: 75px 0;
-	background: url('imgs/tlo2.jpg') center/cover no-repeat;
+	padding: 250px 0;
+	background: url('imgs/tlo.jpg') center/cover no-repeat;
 	color: #fff;
 	text-align: center;
 	overflow: hidden;
