--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
 	position: relative;
 	min-height: calc(100vh);
 	padding: 250px 0;
-	background: url('imgs/tlo3.jpg') center/cover no-repeat;
+	background: url('imgs/tlo.jpg') center/cover no-repeat;
 	color: #fff;
 	text-align: center;
 	overflow: hidden;
@@ -144,7 +144,7 @@ a:hover {
 	margin: 0;
 	text-align: left;
 	top: 10px;
-	left: 275px;
+	left: 475px;
 	position: absolute;
 }
 
