--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
 	position: relative;
 	min-height: calc(100vh);
 	padding: 250px 0;
-	background: url('imgs/tlo.jpg') center/cover no-repeat;
+	background: url('imgs/tlo4.jpg') center/cover no-repeat;
 	color: #fff;
 	text-align: center;
 	overflow: hidden;
@@ -87,7 +87,14 @@ a:hover {
 	font-weight: bold;
 }
 
-
+#about a {
+	color: black;
+	text-decoration: none;
+}
+#cennik a {
+	color: #326647;
+	text-decoration: none;
+}
 .section {
 	padding: 50px 0;
 	text-align: justify;
@@ -261,10 +268,118 @@ a:hover {
 	  margin: 10px 0;
 	}
   }
+#galeria {
+
+}
+#galeria h1 {
+	font-size: 65px;
+	color: white;
+}
+ #zd1 {
+	padding-top: 30px;
+}
+
+.gallery-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    background-color: #ffffff;
+    box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.3);
+    width: 94%;
+    margin: 0 auto;
+    padding: 10px;
+}
+.gallery-item {
+    flex-basis: 32.7%;
+    margin-bottom: 6px;
+    opacity: .85;
+    cursor: pointer;
+}
+.gallery-item:hover {
+    opacity: 1;
+}
+.gallery-item img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.gallery-content {
+    font-size: .8em;
+}
+
+.lightbox {
+    position: fixed;
+    display: none;
+    background-color: rgba(0, 0, 0, 0.6);
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    top: 0;
+    left: 0;
+}
+.lightbox-content {
+    position: relative;
+    width: 65%;
+    height: 58%;
+
+    margin: 5% auto;
+    margin-top: 100px;
+}
+.lightbox-content img {
+    border-radius: 3px;
+    border: 6px solid white;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.lightbox-prev,
+.lightbox-next {
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.8);
+    color: #fff;
+    padding: 9px;
+    top: 45%;
+    cursor: pointer;
+}
+.lightbox-prev {
+    left: 0;
+}
+.lightbox-next {
+    right: 0;
+}
+.lightbox-prev:hover,
+.lightbox-next:hover {
+    opacity: .8;
+}
+
+@media (max-width: 767px) {
+    .gallery-container {
+        width: 100%;
+    }
+    .gallery-item {
+        flex-basis: 49.80%;
+        margin-bottom: 3px;
+    }
+    .lightbox-content {
+        width: 80%;
+        height: 60%;
+        margin: 15% auto;
+    }
+}
+@media (max-width: 480px) {
+    .gallery-item {
+        flex-basis: 100%;
+        margin-bottom: 1px;
+    }
+    .lightbox-content {
+        width: 90%;
+        margin: 20% auto;
+    }
+}
+
 
 .footer {
 	text-align: right;
 	padding: 5px;
 	background-color: white;
 }
-
