--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
 .header {
 	position: relative;
 	min-height: calc(100vh);
-	padding: 250px 0;
+	padding: 200px 0;
 	background: url('imgs/tlo4.jpg') center/cover no-repeat;
 	color: #fff;
 	text-align: center;
@@ -161,6 +161,10 @@ a:hover {
 	background-position: right top;
 }
 
+#fc {
+	text-align: center;
+}
+
 #txt1 {
 	position: absolute;
 	font-size: 30px;
@@ -207,10 +211,10 @@ a:hover {
 }
 
 #ik {
-	padding-top: 200px;
 	font-size: 80px;
 	color: white;
 	transition: 0.1s;
+
 }
 
 #ik:hover {
@@ -304,11 +308,10 @@ a:hover {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    background-color: #ffffff;
-    box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.3);
+    background-color: rgb(255, 255, 255);
     width: 94%;
     margin: 0 auto;
-    padding: 10px;
+    padding: 40px;
 	opacity: 1;
 }
 .gallery-item {
@@ -404,5 +407,7 @@ a:hover {
 .footer {
 	text-align: right;
 	padding: 5px;
-	background-color: white;
+	background-color: black;
+	color: white;
 }
+
